[package]
name = "painters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.20.1"
image = { version = "0.24.5", features = ["jpeg", "png", "bmp", "gif", "ico", "webp", "farbfeld"] }
rfd = "0.10.0"
